update testi, gambar dan emot

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
     <section id="services" class="quickstart-services section light-background">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Penawaran Eksklusif Hari Ini! 🔔</h2>
+        <h2>Penawaran Eksklusif Hari Ini! 🙌🏻💫🎟️</h2>
         <p>
           Segera manfaatkan penawaran spesial kelas dan event menarik dari
           Dialogika!
@@ -423,7 +423,7 @@
             <div class="service-item item-cyan position-relative bg">
               <i class="bi bi-laptop-fill icon"></i>
               <div>
-                <h3>Penawaran Eksklusif Kelas Online! 🏷️</h3>
+                <h3>Penawaran Eksklusif Kelas Online! 🔥</h3>
                 <p>
                   Nikmati kelas bersama mentor professional dengan peserta
                   terbatas selama sebulan! Dengan garansi pasti bisa!
@@ -439,7 +439,7 @@
             <div class="service-item item-orange position-relative">
               <i class="bi bi-people-fill icon"></i>
               <div>
-                <h3>Kelas Offline Tersisa Sedikit! 📍</h3>
+                <h3>Kelas Offline Tersisa Sedikit! 👥</h3>
                 <p>
                   Dibimbing secara langsung dari ahlinya, fokus latihan dan
                   setiap kali latihan selalu ada evaluasi hingga mahir
@@ -455,7 +455,7 @@
             <div class="service-item item-teal position-relative">
               <i class="bi bi-easel icon"></i>
               <div>
-                <h3>Kelas Presentasi Anak 🙋</h3>
+                <h3>Kelas Presentasi Anak 🙋🏻</h3>
                 <p>
                   Pendiem, pasif, kebanyakan main game, susah interaksi hingga
                   Moms diingatkan guru jika putra-putri moms kurang
@@ -473,7 +473,7 @@
             <div class="service-item item-red position-relative">
               <i class="bi bi-person-badge icon"></i>
               <div>
-                <h3>Internship Program 👩‍🏭</h3>
+                <h3>Internship Program 🧳</h3>
                 <p>
                   Gabut, sulit cari kerja, fomo teman-teman lo pada magang.
                   Udah deh, latih dirimu untuk lebih produktif dan memiliki
@@ -490,7 +490,7 @@
             <div class="service-item item-indigo position-relative">
               <i class="bi bi-calendar4-week icon"></i>
               <div>
-                <h3>Jadwalkan Bertemu Admin 🤵‍♀️</h3>
+                <h3>Jadwalkan Bertemu Admin 🧑🏻‍💼</h3>
                 <p>
                   Masih ragu dengan kebutuhanmu? atau ingin konsultasi lebih
                   mendalam bersama Admin Dialogika. Yuk janjian dulu
@@ -507,7 +507,7 @@
             <div class="service-item item-pink position-relative">
               <i class="bi bi-building-check icon"></i>
               <div>
-                <h3>Kelas Khusus Kantor 🏛︎</h3>
+                <h3>Kelas Khusus Kantor 🏢</h3>
                 <p>
                   Karyawan pendiem, nggak aktif, gak punya inisiatif, hingga
                   gak bisa diajak diskusi. Saran kami dibandingkan benahi
@@ -566,12 +566,12 @@
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>Thank God I found a place to learn public
                         speaking that can be combined with work, taking care of children and family. The mentor is
                         really cool and humble. Learning is not just about theory, but is really a place for direct
-                        practice. Apart from the price being affordable compared to offline, the class management is
-                        also really good.
+                        practice. 
                         <span class="dots">...</span><span class="readMore"> Read
                           More
                           &raquo;</span>
-                        <span class="moreText"> Get e-modules and class recordings too. So we can see our progress over
+                        <span class="moreText"> Apart from the price being affordable compared to offline, the class management is
+                          also really good. Get e-modules and class recordings too. So we can see our progress over
                           time from our own perspective. At first I was a bit scared, too much overthinking, but I
                           learned a lot from my mentor. Not only about public speaking, but life values ​​too. BTW,
                           success is always dialogue. Thank you for providing a forum for learning public speaking.
@@ -593,8 +593,10 @@
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
-                      <img src="assets/img/intern/septi.jpg" class="testimonial-img" alt="testimoni-2" />
-                      <h3>Septi Allya Rizki</h3>
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXIJ4bf3G6cmTkYzmkDm-JXKa2njfYMbRqoMngDMoUB80-L018S=w99-h99-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-3" />
+                      <h3>Ziky Dwi Aryanto</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -604,15 +606,15 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Selama magang di dialogika aku bisa mengupgrade skill dan memanfaatkannya, dan magang di
-                        dialogika menurutku worth it banget untuk teman teman mahasiswa atau teman teman yang lagi cari
-                        experience magang baik itu online atau offline, bisa nambah relasi, nambah
-                        <span class="dots">...</span><span class="readMore"> Read
+                        Kelas Dialogika adalah pilihan yang pas. Di sini, kita nggak cuma diajarin teori 
+                        soal ngomong di depan umum, tapi juga langsung diajak praktik. Jadi, belajar di 
+                        Dialogika itu nggak cuma duduk dengerin, tapi langsung action!<span class="dots">...</span><span class="readMore"> Read
                           More
                           &raquo;</span>
-                        <span class="moreText"> pengalaman, bisa
-                          bantu update portofolio, dan cv jugaa plusnya rekan kerja seruu dan humble</span><span
-                          class="readLess"> &laquo; Read Less</span>
+                        <span class="moreText">Mentornya keren banget, mereka tahu gimana cara bikin kita
+                           yang awalnya gugup jadi lebih percaya diri. Nggak perlu takut salah, karena suasana
+                            kelasnya santai dan supportif. Kita juga dapat masukan yang detail, jadi tahu bagian
+                             mana yang perlu diperbaiki.</span><span class="readLess"> &laquo; Read Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -624,9 +626,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXu0Ao-Gg1ywouhxgKGjORSHIvZvmdUg_FwwOBvNnJri73tOFU=w99-h99-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-1" />
-                      <h3>Indriyani Emilia</h3>
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXVyTzt6jHB36-93da45WRsU-R08jzJb1NB0BeGSBtFqkS1PM5K9A=w75-h75-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Setyana Vidita</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -636,15 +638,13 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Mentor saya bernama Salsabiila ( Mba Chacha), sangat
-                        profesional sekali walau usianya masih muda. Banyak
-                        ilmu PS baru yang saya dapat walau hanya lewat 7x
-                        pertemuan full dengan teori dan juga praktek, very
-                        <span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
-                        <span class="moreText">
-                          recommended buat kalian yang sedang mencari mentor
-                          di bidang PS. Sukses terus untuk Dialogika!!</span><span class="readLess"> &laquo; Read
-                          Less</span><i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                        The learning is flexible, in private classes we can adapt more to our professional needs and the
+                        mentor will follow. <span class="dots">...</span><span class="readMore"> Read
+                          More
+                          &raquo;</span>
+                        <span class="moreText">You can brainstorm and discuss a lot while learning... so you both get
+                          interesting insights</span><span class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
                   </div>
@@ -710,9 +710,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjWSupNiZMswuYflJu-AHygDtS55p5M_EbXj7V4fVu0fGDmud6eY=w99-h99-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUQ-Vq8rm5wwY5efzwiKmKbxyy-q6hh36u-mmH9mjtez315cJ7H=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>Rina Widarsih</h3>
+                      <h3>Astrid Savitri</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -722,17 +722,14 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Putri saya (12th) mengambil kursus level 1. Setelah
-                        menyelesaikan kursus, perubahan yang terlihat pada
-                        putri saya adalah ia bisa menatap audiens saat
-                        berbicara di depan orang lain. Sebelumnya, ia lebih
-                        banyak
-                        <span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
-                        <span class="moreText">
-                          menunduk. Penyampaian ide pikiran juga lancar.
-                          Terima kasih Dialogika atas pendampingannya. Terima
-                          kasih kepada Kak Dzakey sebagai mentor.</span><span class="readLess"> &laquo; Read
-                          Less</span><i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                        Learning public speaking at Dialogika is very enjoyable, both in the learning atmosphere and the
+                        mentors. Here, you not only gain knowledge but <span class="dots">...</span><span
+                          class="readMore"> Read
+                          More
+                          &raquo;</span>
+                        <span class="moreText"> also the confidence to speak well in public.</span><span
+                          class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
                   </div>
@@ -776,9 +773,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVD2VgPiURYx6XPfy5hkWci8cg5yDXT9vKxoQk4obQEGPiOxTByRA=w75-h75-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-1" />
-                      <h3>Indra Hadi</h3>
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjVOa3Zre1T5p9Bkj_lRckkHiln4vXvw4Ds_ra5c464yFg-YyjE=w99-h99-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Diah Ayu Septyandani</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -788,14 +785,16 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Dialogic provides training programs that are interesting, easy to digest and apply. The trainers
-                        are very experienced and can be discussed with and also always provide feedback so that we can
-                        continue
+                        Terimakasih kepada diaologika sudah membimbing saya untuk belajar public speaking 
+                        pada level awal. Sangat menyenangkan dan mudah dipahami sehingga saya sudah mengetahui
+                         baik dan bener nya untuk melakukan pembicaraan di depan orang banyak.
                         <span class="dots">...</span><span class="readMore"> Read
                           More
                           &raquo;</span>
-                        <span class="moreText"> to improve. Certainly the material is very useful for me. Thank you
-                          Dialogic!</span><span class="readLess"> &laquo; Read Less</span>
+                        <span class="moreText">  Semoga diaologika
+                          semakin sukses dan bisa memiliki kantor offline tersendiri. Agar ketika kelas para siswa 
+                          dan siswa tidak kebingungan ataupun salah masuk ruangan kedepannya. Salam dari Diah</span><span
+                          class="readLess"> &laquo; Read Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
