--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             <div class="service-item item-cyan position-relative bg">
               <i class="bi bi-laptop-fill icon"></i>
               <div>
-                <h3>Penawaran Eksklusif Kelas Online! 🔥</h3>
+                <h3>Penawaran Eksklusif Kelas Online! 💻</h3>
                 <p>
                   Nikmati kelas bersama mentor professional dengan peserta
                   terbatas selama sebulan! Dengan garansi pasti bisa!
@@ -439,7 +439,7 @@
             <div class="service-item item-orange position-relative">
               <i class="bi bi-people-fill icon"></i>
               <div>
-                <h3>Kelas Offline Tersisa Sedikit! 👥</h3>
+                <h3>Kelas Offline Tersisa Sedikit! 👩‍🏫</h3>
                 <p>
                   Dibimbing secara langsung dari ahlinya, fokus latihan dan
                   setiap kali latihan selalu ada evaluasi hingga mahir
