update gambar, testi, dan  emote

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             <div class="service-item item-teal position-relative">
               <i class="bi bi-easel icon"></i>
               <div>
-                <h3>Kelas Presentasi Anak 🙋🏻</h3>
+                <h3>Kelas Presentasi Anak 👶</h3>
                 <p>
                   Pendiem, pasif, kebanyakan main game, susah interaksi hingga
                   Moms diingatkan guru jika putra-putri moms kurang
@@ -566,11 +566,12 @@
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>Thank God I found a place to learn public
                         speaking that can be combined with work, taking care of children and family. The mentor is
                         really cool and humble. Learning is not just about theory, but is really a place for direct
-                        practice. 
+                        practice.
                         <span class="dots">...</span><span class="readMore"> Read
                           More
                           &raquo;</span>
-                        <span class="moreText"> Apart from the price being affordable compared to offline, the class management is
+                        <span class="moreText"> Apart from the price being affordable compared to offline, the class
+                          management is
                           also really good. Get e-modules and class recordings too. So we can see our progress over
                           time from our own perspective. At first I was a bit scared, too much overthinking, but I
                           learned a lot from my mentor. Not only about public speaking, but life values ​​too. BTW,
@@ -594,9 +595,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXIJ4bf3G6cmTkYzmkDm-JXKa2njfYMbRqoMngDMoUB80-L018S=w99-h99-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjW2c5v3lksnRNJ9RGNNiJ6HQxL749iJ83vOry1m1W_T44Aaudfv=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-3" />
-                      <h3>Ziky Dwi Aryanto</h3>
+                      <h3>dika handika</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -606,15 +607,13 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Kelas Dialogika adalah pilihan yang pas. Di sini, kita nggak cuma diajarin teori 
-                        soal ngomong di depan umum, tapi juga langsung diajak praktik. Jadi, belajar di 
-                        Dialogika itu nggak cuma duduk dengerin, tapi langsung action!<span class="dots">...</span><span class="readMore"> Read
+                        The class was held in a very relaxed and enjoyable manner. My mentor, Ka Septy, was very helpful
+                        in my public speaking progress. I have become braver and more organized <span
+                          class="dots">...</span><span class="readMore"> Read
                           More
                           &raquo;</span>
-                        <span class="moreText">Mentornya keren banget, mereka tahu gimana cara bikin kita
-                           yang awalnya gugup jadi lebih percaya diri. Nggak perlu takut salah, karena suasana
-                            kelasnya santai dan supportif. Kita juga dapat masukan yang detail, jadi tahu bagian
-                             mana yang perlu diperbaiki.</span><span class="readLess"> &laquo; Read Less</span>
+                        <span class="moreText">when speaking in public</span><span class="readLess"> &laquo; Read
+                          Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -785,16 +784,16 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Terimakasih kepada diaologika sudah membimbing saya untuk belajar public speaking 
+                        Terimakasih kepada diaologika sudah membimbing saya untuk belajar public speaking
                         pada level awal. Sangat menyenangkan dan mudah dipahami sehingga saya sudah mengetahui
-                         baik dan bener nya untuk melakukan pembicaraan di depan orang banyak.
+                        baik dan bener nya untuk melakukan pembicaraan di depan orang banyak.
                         <span class="dots">...</span><span class="readMore"> Read
                           More
                           &raquo;</span>
-                        <span class="moreText">  Semoga diaologika
-                          semakin sukses dan bisa memiliki kantor offline tersendiri. Agar ketika kelas para siswa 
-                          dan siswa tidak kebingungan ataupun salah masuk ruangan kedepannya. Salam dari Diah</span><span
-                          class="readLess"> &laquo; Read Less</span>
+                        <span class="moreText"> Semoga diaologika
+                          semakin sukses dan bisa memiliki kantor offline tersendiri. Agar ketika kelas para siswa
+                          dan siswa tidak kebingungan ataupun salah masuk ruangan kedepannya. Salam dari
+                          Diah</span><span class="readLess"> &laquo; Read Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
