update icon, testi, dan gambar

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             <div class="service-item item-red position-relative">
               <i class="bi bi-person-badge icon"></i>
               <div>
-                <h3>Internship Program 🧳</h3>
+                <h3>Internship Program 🎓💼</h3>
                 <p>
                   Gabut, sulit cari kerja, fomo teman-teman lo pada magang.
                   Udah deh, latih dirimu untuk lebih produktif dan memiliki
@@ -609,9 +609,7 @@
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                         The class was held in a very relaxed and enjoyable manner. My mentor, Ka Septy, was very helpful
                         in my public speaking progress. I have become braver and more organized <span
-                          class="dots">...</span><span class="readMore"> Read
-                          More
-                          &raquo;</span>
+                          class="dots">...</span><span class="readMore"> Read More &raquo;</span>
                         <span class="moreText">when speaking in public</span><span class="readLess"> &laquo; Read
                           Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
