update foto & testi

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <section class="section hero"></section>
       </div>
       <div class="image-container">
-        <img src="assets/img/window5.webp" alt="image" />
+        <img src="assets/img/window2.webp" alt="image" />
       </div>
     </div>
     <!-- Scrolling Zoom -->
@@ -623,9 +623,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXVyTzt6jHB36-93da45WRsU-R08jzJb1NB0BeGSBtFqkS1PM5K9A=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUPk5r0alPThkTEOoYWPKexwXGbKi3wj7mCDKcvrIfJvpJjK12K=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-2" />
-                      <h3>Setyana Vidita</h3>
+                      <h3>Ayu Polsa</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -635,12 +635,12 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The learning is flexible, in private classes we can adapt more to our professional needs and the
-                        mentor will follow. <span class="dots">...</span><span class="readMore"> Read
-                          More
+                        A recommended place to learn public speaking, the material is easy to understand, the mentors
+                        are kind & very patient, the best experience is being able to learn at dialogics, <span
+                          class="dots">...</span><span class="readMore"> Read More
                           &raquo;</span>
-                        <span class="moreText">You can brainstorm and discuss a lot while learning... so you both get
-                          interesting insights</span><span class="readLess"> &laquo; Read Less</span>
+                        <span class="moreText">hopefully you will be more successful in the future😊 …</span><span
+                          class="readLess"> &laquo; Read Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -770,9 +770,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVOa3Zre1T5p9Bkj_lRckkHiln4vXvw4Ds_ra5c464yFg-YyjE=w99-h99-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUIiIkuX2_H0jI4UcNi2BgfTB4RUwMaZXiz5rGwW9bm7yZOxIa-=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-2" />
-                      <h3>Diah Ayu Septyandani</h3>
+                      <h3>Ida Fitriana</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -782,16 +782,13 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Terimakasih kepada diaologika sudah membimbing saya untuk belajar public speaking
-                        pada level awal. Sangat menyenangkan dan mudah dipahami sehingga saya sudah mengetahui
-                        baik dan bener nya untuk melakukan pembicaraan di depan orang banyak.
-                        <span class="dots">...</span><span class="readMore"> Read
-                          More
+                        Thanks Dialogic and Ms. Syifa for her guidance and explaining the material step by step clearly
+                        to the children patiently and cheerfully in the Kids Plus public speaking class,
+                        <span class="dots">...</span><span class="readMore"> Read More
                           &raquo;</span>
-                        <span class="moreText"> Semoga diaologika
-                          semakin sukses dan bisa memiliki kantor offline tersendiri. Agar ketika kelas para siswa
-                          dan siswa tidak kebingungan ataupun salah masuk ruangan kedepannya. Salam dari
-                          Diah</span><span class="readLess"> &laquo; Read Less</span>
+                        <span class="moreText"> there are interesting challenges in each class so it increases my
+                          children's courage. Always successful Dialogic..</span><span class="readLess"> &laquo; Read
+                          Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
