update testimoni dan gambar

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
             <div class="service-item item-pink position-relative">
               <i class="bi bi-building-check icon"></i>
               <div>
-                <h3>Kelas Khusus Kantor 🏢</h3>
+                <h3>Kelas Khusus Kantor 🏪</h3>
                 <p>
                   Karyawan pendiem, nggak aktif, gak punya inisiatif, hingga
                   gak bisa diajak diskusi. Saran kami dibandingkan benahi
@@ -679,9 +679,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUAuYu_wBIVAz8aVNjd6tVU564uyfBVA6RqTYav7fo1YsN8IvTdNg=w75-h75-p-rp-mo-ba3-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjVcfhUwy5ANHpAC8m-8pdc7aJ9Kgmw_wWhcNY2PdklP52_vBNJB=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>Fatah Hidayat</h3>
+                      <h3>Rahman Harysaid</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -691,12 +691,12 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The class is exciting, fun, guided by a reliable, friendly and patient instructor. After taking
-                        this class, you will increase your confidence in appearing to speak in public with a calm and
-                        systematic delivery.
-                        <span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
+                        extraordinary experience
+                        very good mentor
+                        get new insights in the world of public speaking
+                        <!-- <span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
                         <span class="moreText"></span><span class="readLess"> &laquo; Read Less</span><i
-                          class="bx bxs-quote-alt-right quote-icon-right"></i>
+                          class="bx bxs-quote-alt-right quote-icon-right"></i> -->
                       </p>
                     </div>
                   </div>
