update gambar, testi, dan emote

--- a/index.html
+++ b/index.html
@@ -679,9 +679,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVcfhUwy5ANHpAC8m-8pdc7aJ9Kgmw_wWhcNY2PdklP52_vBNJB=w75-h75-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-1" />
-                      <h3>Rahman Harysaid</h3>
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWZ_iD9s3WbiTWOSprcaxBsy-fKJy_L0NjdVeor_SQCJiPrpAM=w75-h75-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Agustin Dinda</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -691,12 +691,14 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        extraordinary experience
-                        very good mentor
-                        get new insights in the world of public speaking
-                        <!-- <span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
-                        <span class="moreText"></span><span class="readLess"> &laquo; Read Less</span><i
-                          class="bx bxs-quote-alt-right quote-icon-right"></i> -->
+                        It's really really good, the mentor is really good, teaches lots of tips and tricks. It's
+                        really, really satisfying... there's a lot of knowledge to be gained 🫶🏻
+                        <!-- <span class="dots">...</span><span class="readMore"> Read
+                          More
+                          &raquo;</span>
+                        <span class="moreText"></span><span
+                          class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i> -->
                       </p>
                     </div>
                   </div>
