update testi, icon, dan gambar

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             <div class="service-item item-teal position-relative">
               <i class="bi bi-easel icon"></i>
               <div>
-                <h3>Kelas Presentasi Anak 👶</h3>
+                <h3>Kelas Presentasi Anak 🧒</h3>
                 <p>
                   Pendiem, pasif, kebanyakan main game, susah interaksi hingga
                   Moms diingatkan guru jika putra-putri moms kurang
@@ -595,9 +595,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjW2c5v3lksnRNJ9RGNNiJ6HQxL749iJ83vOry1m1W_T44Aaudfv=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjVeui8gH9ONxZNJLvtOSS6aSiq_Xwf-eb6mikufgJPD0jMgZGdV=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-3" />
-                      <h3>dika handika</h3>
+                      <h3>imam baehaqi</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -607,11 +607,11 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The class was held in a very relaxed and enjoyable manner. My mentor, Ka Septy, was very helpful
-                        in my public speaking progress. I have become braver and more organized <span
-                          class="dots">...</span><span class="readMore"> Read More &raquo;</span>
-                        <span class="moreText">when speaking in public</span><span class="readLess"> &laquo; Read
-                          Less</span>
+                        thank you dialogika, the knowledge files, thank God there has been extraordinary progress,
+                        especially my mentor, Mas Panji, who was always patient in guiding me from the first
+                        IDIALOGIKA team <span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
+                        <span class="moreText">meeting to the last meeting, even though it was online but very
+                          impressive, once again thank you to the</span><span class="readLess"> &laquo; Read Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -623,9 +623,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUPk5r0alPThkTEOoYWPKexwXGbKi3wj7mCDKcvrIfJvpJjK12K=w75-h75-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXVkTatlbhJDQFwCwgXDp0iT_leoI2tx0_LNfydThpcALFOZrH-gw=w75-h75-p-rp-mo-ba3-br100"
                         class="testimonial-img" alt="testimoni-2" />
-                      <h3>Ayu Polsa</h3>
+                      <h3>Fahmi Rosdiana</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -635,11 +635,10 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        A recommended place to learn public speaking, the material is easy to understand, the mentors
-                        are kind & very patient, the best experience is being able to learn at dialogics, <span
-                          class="dots">...</span><span class="readMore"> Read More
-                          &raquo;</span>
-                        <span class="moreText">hopefully you will be more successful in the future😊 …</span><span
+                        It was very useful for me to practice speaking in a structured manner. With a mentor who is
+                        friendly, communicative and able to provide constructive input. <span
+                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
+                        <span class="moreText"> Now I am more confident in speaking in public</span><span
                           class="readLess"> &laquo; Read Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
